# TarotSolver

./: .gitignore  GAMEPLAN.md  LEAGUE_TAB_TODO.temp.md  LICENSE  README.md  install_cuda_torch.py  pyproject.toml  requirements-cuda.txt  run.py  tests.py  v0.1.0.md
docs/: dashboard-implementation.md  display-layout-study.md  league-tab-implementation.md  rules.md
src/tarot/: __init__.py  agents.py  bidding.py  cli.py  deal.py  deck.py  device.py  env.py  env_game.py  ga.py  game.py  league.py  models.py  persistence.py  play.py  play_random.py  policies.py  population_helpers.py  project.py  scoring.py  tournament.py  training.py
src/tarot_gui/: __init__.py  charts.py  dashboard_blocks.py  league_tab.py  main.py  project_dialog.py  run_log.py  themes.py
tests/: test_agents.py  test_cli_league.py  test_dashboard_blocks.py  test_engine.py  test_env.py  test_env_game.py  test_ga.py  test_gui_league.py  test_league.py  test_persistence.py  test_policies.py  test_population_helpers.py  test_project.py  test_run_log.py  test_tournament.py  test_training.py
