[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tarot-solver"
version = "0.1.0"
description = "Tarot game engine and RL training (FFT rules, 3/4/5 players)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]
rl = ["torch>=2.0.0", "numpy>=1.23"]
gui = ["PySide6>=6.6"]

[project.scripts]
tarot = "tarot.cli:main"
tarot-gui = "tarot_gui.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
